--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "devDependencies": {
-
     "tailwindcss": "^3.4.17"
   },
   "dependencies": {
-    "react-router-dom": "^7.6.2"
-
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.6.2",
+    "tailwindcss-grid-areas": "^0.1.1"
   }
 }
